# powerplant-coding-challenge

./: README.md  pyproject.toml
gems_powerplants/: __init__.py  route.py
gems_powerplants/input_models/: __init__.py  powerplants.py
gems_powerplants/output_models/: __init__.py  powerplants.py
gems_powerplants/utils/: __init__.py  body_parser.py  solver.py
